[package]
name = "file_sharing_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
futures = "0.3"
env_logger = "0.10"
dotenv = "0.15"
